IAP-12 / IAP-133: Expose an API for searching the data Fix the searches that could not be served
Joins were documented as supported and failed on their first row: asking a result
row for its path without naming a selector throws as soon as the query has more
than one, which every join has. An apostrophe in a full-text search reached the
repository's parser as an unterminated phrase, since the statement's own escaping
doubles it and parsing the statement undoes that again.

Raw results read every selected column with getString(), which reads a binary in
full -- a statement may select the data of every file there is -- so binary columns
are reported as null instead.

Every call into a quick search engine is now inside one guard, the type questions
as much as the search itself, and results are closed whether or not they were read
to the end, stopping early being the ordinary outcome rather than an edge case.

warnIfUnindexed logged the client's statement verbatim, which in full-text mode is
the user's search text: terms landed in error.log outside the access control that
is this endpoint's whole story about who sees what, and a newline in them would
have let a client forge log entries.